# egui-clock

./: Cargo.toml  README.md
assets/: icon.rc
src/: main.rs
