[package]
name = "clock"
version = "0.1.0"
edition = "2021"
#build="build.rs"

[build-dependencies]
#embed-resource = "2.4.2"


[dependencies]
eframe = { version = "0.27.2", features = []}
egui_extras = { version = "0.27.2", features = ["all_loaders"] }

image = "0.25.1"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
kira = "0.9.0"